# html_parser

./: Cargo.toml  test.md
src/: frontmatter.rs  lib.rs  main.rs
tests/: cli.rs  frontmatter.rs
tests/expected/: front_matter1_expected  heading1_expected
tests/inputs/: front_matter1.md  heading1.md
