[package]
name = "html_parser"
version = "0.1.0"
edition = "2021"
authors = [ "ashrock <dlwotjr2@gmail.com>" ]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
markdown = { git = "https://github.com/ashrock-2/markdown-rs", branch = "main" }

[dev-dependencies]
assert_cmd = "2.0.16"
